fix: Graph resize handle doesn't work when it overlaps x-axis attribute name (CODAP-926) (#2189)
* fix: Graph resize handle doesn't work when it overlaps attribute name (CODAP-926)

[CODAP-926](https://concord-consortium.atlassian.net/browse/CODAP-926)

--- a/v3/src/components/axis/components/axis-or-legend-attribute-menu.scss
+++ b/v3/src/components/axis/components/axis-or-legend-attribute-menu.scss
@@ -2,7 +2,6 @@
 
 .attribute-label-menu {
   touch-action: none;
-  z-index: 16;
 }
 
 .collection-menu-button {
