--- a/v3/src/components/drag-drop/attribute-drag-overlay.scss
+++ b/v3/src/components/drag-drop/attribute-drag-overlay.scss
@@ -16,5 +16,4 @@
 .dnd-kit-drag-overlay {
   // This element was preventing WebViewDropOverlays from receiving pointerenter, pointermove, and pointerleave events.
   pointer-events: none;
-  z-index: 999999;
 }
